--- a/package.json
+++ b/package.json
@@ -2,25 +2,51 @@
   "name": "budgie",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "fix": "run-s fix:*",
+    "fix:eslint": "pnpm lint:eslint --fix",
+    "fix:format": "pnpm lint:format --write",
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint . --max-warnings=0",
+    "lint:format": "prettier \"./**/*.{js,jsx,ts,tsx,svg}\" --list-different"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@libsql/client": "^0.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.12.0",
+    "@tanstack/react-table": "^8.20.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.33.0",
+    "lucide-react": "^0.427.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-hook-form": "^7.52.2",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@prettier/plugin-xml": "^3.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.0",
+    "eslint": "^9.4.0",
+    "eslint-config-next": "14.2.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.0.1"
   }
 }
