--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@8.13.1",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -18,6 +19,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@libsql/client": "^0.9.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.12.0",
     "@tanstack/react-table": "^8.20.1",
