--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "type": "module",
   "packageManager": "pnpm@8.13.1",
+  "engines": {
+    "node": ">=20"
+  },
+  "volta": {
+    "node": "20.16.0"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -13,7 +19,9 @@
     "fix:format": "pnpm lint:format --write",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint . --max-warnings=0",
-    "lint:format": "prettier \"./**/*.{js,jsx,ts,tsx,svg}\" --list-different"
+    "lint:format": "prettier \"./**/*.{js,jsx,ts,tsx,svg}\" --list-different",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -21,10 +29,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@tabler/icons-react": "^3.12.0",
     "@tanstack/react-table": "^8.20.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
