--- a/package.json
+++ b/package.json
@@ -31,16 +31,26 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tabler/icons-react": "^3.12.0",
+    "@tanstack/react-query": "^5.52.2",
     "@tanstack/react-table": "^8.20.1",
+    "@trpc/client": "11.0.0-rc.485",
+    "@trpc/next": "11.0.0-rc.485",
+    "@trpc/react-query": "11.0.0-rc.485",
+    "@trpc/server": "11.0.0-rc.485",
+    "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.427.0",
+    "minimatch": "^10.0.1",
     "next": "14.2.5",
+    "pino": "^9.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
